Refatoração de entidades e implementação de domínio para resultados.

--- a/src/main/webapp/template/main.xhtml
+++ b/src/main/webapp/template/main.xhtml
@@ -8,10 +8,10 @@
 	<link type="text/css" rel="stylesheet" href="css/styles.css" />
 </h:head>
 
-<h:body style="background-color:#f1f1f1">
+<h:body style="background-color:#ffffff">
 	<table style="width: 100%">
 		<tr>
-			<td height="70" align="left"><a href="index.jsf"><img src="images/logo.png" border="0" /></a></td>
+			<td height="70" align="left"><a href="index.jsf"><img src="images/trevo.png" border="0" /></a></td>
 		</tr>
 		<tr>
 			<td height="20"><ui:include src="/menu.xhtml" /></td>
